<resources>
    <string name="app_name">Anthropological cultural quizzes</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="name_header">Iacob Sebastian Mihai</string>
    <string name="email_header">iacobsebastian22@stud.ase.ro</string>
    <string name="navigation_drawer_open">Open navigation opener</string>
    <string name="navigation_drawer_close">Close navigation opener\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_slideshow">About</string>
    <string name="about_fragment_title">About the Anthropology Quizzes</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="responses">Responses</string>
    <string name="quiz_responses">Quiz Responses</string>
    <string name="start">Start</string>
    <string name="quizezes">Quizzes</string>
    <string name="finish">Finish</string>
    <string name="anthropological_cultural_quizzes">Anthropological cultural quizzes</string>
    <string name="next">Next</string>
    <string name="start_cultural_anthropological_quiz">Start cultural anthropological quiz</string>
    <string name="learn_and_test_your_knowledge_of_human_societies_and_cultural_practices">Learn and test your knowledge of human societies and cultural practices!</string>
    <string name="explore_cultural_anthropology_through_these_engaging_and_interactive_quizzes">Explore cultural anthropology through these engaging and interactive quizzes.</string>
</resources>