<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AboutFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:id="@+id/iacob_sebastian_about_card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/secondary_bej_calcar"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp">

        <TextView
            android:padding="5dp"
            android:id="@+id/iacob_sebastian_about_card_description_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:elegantTextHeight="true"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/explore_cultural_anthropology_through_these_engaging_and_interactive_quizzes"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/iacob_sebastian_about_card_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/secondary_bej_calcar"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_about_card_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">
        <TextView
            android:padding="5dp"
            android:id="@+id/iacob_sebastian_about_card_description_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:elegantTextHeight="true"
            android:text="@string/learn_and_test_your_knowledge_of_human_societies_and_cultural_practices"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iacob_sebastian_anthropology_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_about_card_2"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:src="@drawable/anthropology_icon"
        />


    <TextView
        android:id="@+id/iacob_sebastian_rate_app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_this_app"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_anthropology_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingBottom="4dp"
        />
    <RatingBar
        android:id="@+id/iacob_sebastian_about_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_rate_app_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:numStars="5"
        android:stepSize="0.5"
        android:paddingBottom="16dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>