<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizResolverActivity">


    <TextView
        android:id="@+id/iacob_sebastian_quiz_question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iacob_sebastian_radio_group_quiz"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        />

    <RadioGroup
        android:id="@+id/iacob_sebastian_radio_group_quiz"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_quiz_question_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iacob_sebastian_next_question_button"
        android:weightSum="4"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp">

        <RadioButton
            android:id="@+id/iacob_sebastian_option_1_quiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            style="@style/CustomRadioButtonTheme"
            />
        <RadioButton
            android:id="@+id/iacob_sebastian_option_2_quiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            style="@style/CustomRadioButtonTheme"
            />
        <RadioButton
            android:id="@+id/iacob_sebastian_option_3_quiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            style="@style/CustomRadioButtonTheme"

            />
        <RadioButton
            android:id="@+id/iacob_sebastian_option_4_quiz"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            style="@style/CustomRadioButtonTheme"
            />
    </RadioGroup>

    <Button
        android:id="@+id/iacob_sebastian_next_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_radio_group_quiz"
        android:layout_marginBottom="20dp"
        style="@style/CustomButtonTheme"
        />

    <!--Pentru final-->
    <ImageView
        android:id="@+id/iacob_sebastian_image_view_grade"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/quiz_icon"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitCenter"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/iacob_sebastian_quiz_correct_answers_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_image_view_grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="40dp"
        />
    <ProgressBar
        android:id="@+id/iacob_sebastian_quiz_correct_answers_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:max="100"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_quiz_correct_answers_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:progressTint="@color/easy_green"
        android:layout_marginHorizontal="20dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:padding="3dp"
        />

    <TextView
        android:id="@+id/iacob_sebastian_quiz_wrong_answers_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_quiz_correct_answers_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="40dp"
        />
    <ProgressBar
        android:id="@+id/iacob_sebastian_quiz_wrong_answers_progress_bar"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:max="100"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_quiz_wrong_answers_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:progressTint="@color/warm_red"
        style="?android:attr/progressBarStyleHorizontal"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/iacob_sebastian_quiz_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@android:drawable/ic_input_get"
        android:text="@string/finish"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/iacob_sebastian_quiz_wrong_answers_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>